Oops, wrong LinkedIn link

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
       <div class="cta-row">
         <!-- Replace these links with yours -->
-        <a class="btn primary" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">✨ LinkedIn</a>
+        <a class="btn primary" href="https://www.linkedin.com/emily-desverreaux" target="_blank" rel="noreferrer">✨ LinkedIn</a>
         <a class="btn" href="https://github.com/emilydesverreaux" target="_blank" rel="noreferrer">💾 GitHub</a>
         <a class="btn" href="#projects">🧩 See projects</a>
       </div>
