--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
     <header class="hero">
       <div class="sparkles" aria-hidden="true"></div>
-      <span class="kicker">👾 cute • pink • pixel-ish • very online</span>
+      <span class="kicker">👾 UX focused • big fan of pink • trying to be less online</span>
 
       <div class="hero-row">
         <div style="flex:1 1 420px; min-width:260px;">
