--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
           </div>
 
           <p class="tiny" style="margin:12px 0 0;">
-            psst: click the heart for sparkle modes ✨
+            psst: click the diamond for sparkle modes ✨
           </p>
         </div>
       </div>
