--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
       --sparkD: radial-gradient(circle at 80% 75%, var(--hot2) 0 6px, transparent 7px);
     }
 
+    .avatar-img{
+  width: 96px;
+  height: 96px;
+  image-rendering: pixelated;
+  border: 3px solid var(--ink);
+  border-radius: 14px;
+  background: var(--white);
+  box-shadow: 6px 6px 0 var(--shadow);
+}
+
+
     html,body{height:100%;}
     body{
       margin:0;
@@ -407,6 +418,12 @@
       <span class="kicker">👾 UX focused • big fan of pink • trying to be less online</span>
 
       <div class="hero-row">
+        <img
+    src="avatar.png"
+    alt="Pixel avatar of Emily"
+    class="avatar-img"
+  />
+        <span class="tiny">pixel me 👾</span>
         <div style="flex:1 1 420px; min-width:260px;">
           <h1>Hi, I’m Emily.</h1>
           <p class="sub">
