--- a/index.html
+++ b/index.html
@@ -416,33 +416,32 @@
     <header class="hero">
       <div class="sparkles" aria-hidden="true"></div>
       <span class="kicker">👾 UX focused • big fan of pink • trying to be less online</span>
+<div class="hero-row">
+  <div class="hero-text">
+    <h1>Hi, I’m Emily.</h1>
+    <p class="sub">
+      I’m a software engineer focused on <strong>Android</strong> (Compose, Kotlin, architecture).
+      I like building clean UI, shipping real things, and keeping it just a little bit silly.
+    </p>
 
-      <div class="hero-row">
-        <img
-    src="avatar.png"
-    alt="Pixel avatar of Emily"
-    class="avatar-img"
-  />
-        <span class="tiny">pixel me 👾</span>
-        <div style="flex:1 1 420px; min-width:260px;">
-          <h1>Hi, I’m Emily.</h1>
-          <p class="sub">
-            I’m a software engineer focused on <strong>Android</strong> (Compose, Kotlin, architecture).
-            I like building clean UI, shipping real things, and keeping it just a little bit silly.
-          </p>
+    <div class="cta-row">
+      <a class="btn primary" href="https://www.linkedin.com/in/emily-desverreaux/" target="_blank">✨ LinkedIn</a>
+      <a class="btn" href="https://github.com/emilydesverreaux" target="_blank">💾 GitHub</a>
+      <a class="btn" href="resume.pdf" target="_blank">📄 Resume</a>
+      <a class="btn" href="#projects">🧩 See projects</a>
+    </div>
 
-          <div class="cta-row">
-            <!-- FIXED LinkedIn URL format -->
-            <a class="btn primary" href="https://www.linkedin.com/in/emily-desverreaux/" target="_blank" rel="noreferrer">✨ LinkedIn</a>
-            <a class="btn" href="https://github.com/emilydesverreaux" target="_blank" rel="noreferrer">💾 GitHub</a>
-            <a class="btn" href="resume.pdf" target="_blank" rel="noreferrer">📄 Resume</a>
-            <a class="btn" href="#projects">🧩 See projects</a>
-          </div>
+    <p class="tiny" style="margin-top:12px;">
+      psst: click the diamond for sparkle modes ✨
+    </p>
+  </div>
 
-          <p class="tiny" style="margin:12px 0 0;">
-            psst: click the diamond for sparkle modes ✨
-          </p>
-        </div>
+  <div class="avatar-wrap">
+    <img src="avatar.png" alt="Pixel avatar of Emily" class="avatar-img" />
+    <span class="tiny">pixel me 👾</span>
+  </div>
+</div>
+
       </div>
     </header>
 
